package domain;

public class Plataforma {
}
