@startuml
left to right direction
class Plataforma{
}
class Organizacao{
}
class AlgoritmoExternoGeracaoPwd{
}
class Colaborador{
}
class EnderecoPostal{
}
class Utilizador{
}
Plataforma "1" -- "*" Organizacao : tem registadas >
Plataforma "1" -- "1" AlgoritmoExternoGeracaoPwd : recorre a >
Organizacao "1" -- "1..*" Colaborador : tem >
Organizacao "1" -- "1" Colaborador : tem gestor >
Organizacao "0..1" -- "1" EnderecoPostal : localizada em >
Colaborador "0..1" -- "1" Utilizador: atua como >
AlgoritmoExternoGeracaoPwd "1" -- "*" Utilizador: gera password >
@enduml